# midas-watchtower

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  change_detector.py  changedetection_service.py  config.py  config.yaml  docker-compose.single-run.yaml  docker-compose.yaml  github_reporter.py  http_monitor.py  logging_config.py  models.py  monitoring_service.py  pyproject.toml  requirements.txt  run_monitor.py  scheduler.py  sheets_reporter.py
.github/scripts/: config.sh  extract-api-key.sh  logger.sh  wait-for-service.sh
.github/workflows/: ai-safety-monitor.yml
metadata-monitor/: config.yaml  monitor.py  requirements.txt  single_run.py  test_monitor.py
metadata-scraper/: Dockerfile  config.yaml  monitor.py  requirements.txt  scraper.py
