[project]
name = "midas-watchtower"
version = "0.1.0"
description = "Monitoring AI safety changes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi==0.104.1",
    "google-auth==2.23.0",
    "gspread==5.12.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.0.3",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "schedule==1.2.0",
    "uvicorn==0.24.0",
]
[project.scripts]
run-monitor = "run_monitor:main"
